<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layoutBottom"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:id="@+id/layout_credentials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="15"
                        android:visibility="invisible" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70">

                        <com.gemalto.idp.mobile.authentication.mode.face.view.FaceView
                            android:id="@+id/nFaceView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:visibility="gone"></com.gemalto.idp.mobile.authentication.mode.face.view.FaceView>

                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="15"
                        android:visibility="invisible" />
                </LinearLayout>
            </RelativeLayout>

            <com.gemalto.idp.mobile.authentication.mode.face.ui.internal.gui.view.ClippingView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:paddingBottom="@dimen/clippView_bottom_padding" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonStart"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layoutBottom"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:enabled="true"
                android:text="@string/START" />

            <RelativeLayout
                android:id="@+id/layoutProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layoutBottom"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/layoutProgress2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <com.gemalto.idp.mobile.authentication.mode.face.ui.internal.gui.view.CircularProgressView
                        android:id="@+id/stepProgressView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewInstruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="0dp"
                    android:gravity="center_horizontal"
                    android:lines="2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clippView_bottom_padding"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonCancel"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CANCEL"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutRegisteredUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_enroll"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageViewRegisteredUser"
                android:layout_width="@dimen/face_size"
                android:layout_height="@dimen/face_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/face_demo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewRegisteredUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textViewSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/label_success_padding"
                    android:paddingRight="@dimen/label_success_padding"
                    android:text="@string/registration_successful"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/tvSuccessColor"
                    android:textSize="@dimen/label_success_textSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBottomSuccess"
                android:layout_width="match_parent"
                android:layout_height="@dimen/clippView_bottom_padding"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonSuccess"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CONTINUE" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>