<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_red_background"
        android:gravity="center"
        android:padding="8dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layoutBottom"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:id="@+id/layout_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="15"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70" >

                    <com.gemalto.idp.mobile.authentication.mode.face.view.FaceView
                        android:id="@+id/nFaceView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />
                    <!--
                    <View
                        android:id="@+id/nFaceView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true" />
                    -->

                    <com.gemalto.idp.mobile.authentication.mode.face.ui.internal.gui.view.FaceMaskView
                        android:id="@+id/faceMaskView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />


<!--
                    <RelativeLayout
                        android:id="@+id/layoutRegisteredUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/faceMaskView"
                        android:layout_alignTop="@+id/faceMaskView"
                        android:background="@color/white"
                        android:gravity="center"
                        android:visibility="gone" >

                        <ImageView
                            android:id="@+id/imageViewRegisteredUser"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/face_demo" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imageViewRegisteredUser"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal" >

                            <View
                                android:layout_width="0dp"
                                android:layout_height="1dp"
                                android:layout_weight="25"
                                android:visibility="invisible" />

                            <TextView
                                android:id="@+id/textViewSuccess"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:gravity="center"
                                android:text="@string/verification_successful"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="#ffffff"
                                android:textSize="22sp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="1dp"
                                android:layout_weight="25"
                                android:visibility="invisible" />
                        </LinearLayout>

                    </RelativeLayout>
-->
                </RelativeLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="15"
                    android:visibility="invisible" />
            </LinearLayout>

            

        </RelativeLayout>

        <com.gemalto.idp.mobile.authentication.mode.face.ui.internal.gui.view.ClippingView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:paddingBottom="@dimen/clippView_bottom_padding" />

        
        <LinearLayout
            android:id="@+id/layoutProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layoutBottom"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:visibility="visible" >

            <com.gemalto.idp.mobile.authentication.mode.face.ui.internal.gui.view.CircularProgressView
                android:id="@+id/circularProgressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                gto:nb_steps="0" />
        </LinearLayout>
                
        <RelativeLayout android:id="@+id/layoutBlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/layoutBottom">

            <TextView
                android:id="@+id/tvBlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/verification_blinkLabel"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:textSize="@dimen/verify_instructions_size"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

<RelativeLayout
    android:id="@+id/layoutRegisteredUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:paddingBottom="@dimen/clippView_bottom_padding"
    android:layout_alignParentTop="true"
    android:background="@drawable/background_enroll"
    android:visibility="gone" >

                        <ImageView
                            android:id="@+id/imageViewRegisteredUser"
                            android:layout_width="@dimen/face_size"
                            android:layout_height="@dimen/face_size"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="100dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/face_demo" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imageViewRegisteredUser"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/textViewSuccess"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/label_success_padding"
                                android:paddingRight="@dimen/label_success_padding"
                                android:gravity="center"
                                android:text="@string/verification_successful"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/tvSuccessColor"
                                android:textSize="@dimen/label_success_textSize" />

                        </LinearLayout>

                    </RelativeLayout>
                    
        <LinearLayout
            android:id="@+id/layoutBottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clippView_bottom_padding"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonCancel"
                style="@style/buttonGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CANCEL"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonSuccess"
                style="@style/buttonSuccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CONTINUE" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>